fixed positioning of theme switcher button on smaller screens

--- a/personal-site/styles/style.css
+++ b/personal-site/styles/style.css
@@ -122,14 +122,16 @@ header {
 
 #theme-switcher {
   position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: grid;
+  align-content: center;
   background-color: var(--primary-color);
   border: none;
   width: 35px;
-  /* padding: 20px; */
-  bottom: 0;
-  left: 50%;
-  right: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  height: 35px;
+  border-radius: 50%;
   transition: background-color 100ms ease;
 }
 
@@ -292,6 +294,11 @@ footer p a:hover {
     flex-direction: row;
     justify-content: left;
     align-items: center;
+  }
+
+  #theme-switcher {
+    position: unset;
+    transform: none;
   }
 
   #content {
